# SNAC

./: LICENSE  README.md  autoSNAC.py  pyproject.toml  requirements.txt
documentation/: SNACoutput_1216C_52K_Gyr.csv  automatedSNAC.ipynb  eventfulSNAC.ipynb  example_diamond.json  example_model.json  manualSNAC.ipynb
snac/: SNACmodel.py  aggregation.py  cooling.py  diamond.py
