[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = 'snac'
description = "Simultaeous Nitrogen Aggregation and Cooling (SNAC) model"
version = '0.1.0'
requires-python = '>=3.12'
authors = [
    {name = "Laura Speich", email = "laura.speich@debeersgroup.com"}
    ]
license = "MIT"
readme = "README.md"
classifiers = [
    "Natural Language :: English",
    "Operating System :: Windows",
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = [
    "snac"
   ]

[project.scripts]
autoSNAC = "snac.autoSNAC:main"
